# Lab4-TiMP

./: CMakeLists.txt  CMakeLists1.txt  README.md
.github/workflows/: MyFirstAction.yml
formatter_ex_lib/: CMakeLists.txt
formatter_ex_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
formatter_lib/: CMakeLists.txt
formatter_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
hello_world/: CMakeCache.txt  Makefile  cmake_install.cmake
hello_world/formatter_ex_lib/: Makefile
hello_world/formatter_lib/: Makefile
hello_world/hello_world_application/: Makefile  cmake_install.cmake
hello_world_application/: CMakeLists.txt
solve/: CMakeCache.txt  Makefile  cmake_install.cmake
solve/formatter_ex_lib/: Makefile  cmake_install.cmake
solve/formatter_lib/: Makefile  cmake_install.cmake
solve/solver_application/: Makefile  cmake_install.cmake
solve/solver_lib/: Makefile  cmake_install.cmake
solver/: CMakeCache.txt  Makefile  cmake_install.cmake
solver/formatter_ex_lib/: Makefile  cmake_install.cmake
solver/formatter_lib/: Makefile  cmake_install.cmake
solver/solver_application/: Makefile  cmake_install.cmake
solver/solver_lib/: Makefile  cmake_install.cmake
solver_application/: CMakeLists.txt  equation.cpp
solver_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
